# epitok

./: Cargo.toml  changelog.md  readme.md
.github/workflows/: ci.yml
lib/: Cargo.toml
lib/src/: auth.rs  authentication.rs  event.rs  intra.rs  lib.rs  student.rs
src/: auth.rs  authentication.rs  event.rs  intra.rs  lib.rs  main.rs  student.rs
