[package]
name = "epitok"
version = "0.1.0"
authors = ["Philippe Loctaux <p@philippeloctaux.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10.6", features = ["json"] }
regex = "1.3.9"
serde_json = "1.0"
chrono = "0.4.11"

[dev-dependencies]
async-std = { version = "1.6.2", features = ["attributes"] }