[package]
name = "epitok"
version = "0.1.0"
authors = ["Philippe Loctaux <p@philippeloctaux.com>"]
edition = "2018"
repository = "https://github.com/x4m3/epitok"
license = "MIT"
description = "Library to replace tokens in epitech school"

[dependencies]
reqwest = { version = "0.10.6", features = ["json"] }
regex = "1.3.9"
serde_json = "1.0"
chrono = "0.4.11"

[dev-dependencies]
async-std = { version = "1.6.2", features = ["attributes"] }